Better handling of fonts

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -183,8 +183,8 @@ $gridGutter: 24px; // can be a %, but nested grids will have smaller margins bec
 $radius: .25em;
 
 /* Typography */
-$headerFontStack: {{ theme_settings.header-font | remove: 'Google+' }};
-$bodyFontStack: {{ theme_settings.body-font | remove: 'Google+' }};
+$headerFontStack: {{ theme_settings.header-font }};
+$bodyFontStack: {{ theme_settings.body-font }};
 
 
 
