--- a/templates/newsletter/thanks.liquid
+++ b/templates/newsletter/thanks.liquid
@@ -6,7 +6,10 @@
     <main class="section__main page-header__description">
       <div class="message message--success">
         <div class="message__description">
-          <p>{{ "Votre inscription à notre newsletter a bien été enregistrée." | t }}</p>
+          <p>
+            <i class="icon-check"></i>
+            {{ "Votre inscription à notre newsletter a bien été enregistrée." | t }}
+          </p>
         </div>
       </div>
     </main>
