--- a/layouts/theme.liquid
+++ b/layouts/theme.liquid
@@ -18,9 +18,37 @@
   </head>
   <body>
     <section class="page" id="top">
-      <header class="main-header" role="navigation">
-        {% include 'nav' %}
+      <header class="main-header" {% if restaurant.main_image? %} style="background-image: url({{ restaurant.main_image | custom_image_url: '1920x640#' }})" {% endif %}>
+        <div class="wrapper">
+          <div class="grid">
+            <div class="grid-item large--two-thirds">
+              {% if restaurant.logo? %}
+                <div class="logo">
+                  <a class="logo__link" href="{{ localized_root_path }}">
+                    {{ restaurant.logo_url | image_tag:'class:logo__image' }}
+                  </a>
+                </div>
+              {% endif %}
+              <div class="restaurant-name">
+                <a class="restaurant-name__link" href="{{ localized_root_path }}">{{ restaurant.name }}</a>
+              </div>
+            </div>
+            <div class="grid-item large--one-third">
+              <div class="phone-call">
+                {% if restaurant.phone? %}
+                  <a class="phone-call__link" href="tel:{{ restaurant.phone_uri }}">
+                    <span class="phone-call__label">{{ "Tél. :" | t }}</span>
+                    {{ restaurant.phone }}
+                  </a>
+                {% endif %}
+              </div>
+            </div>
+          </div>
+        </div>
       </header>
+      <nav class="main-nav" role="navigation">
+        {% include 'nav' %}
+      </nav>
       <main class="main-content" role="main">
         {{ content_for_layout }}
       </main>
