--- a/templates/newsletter/form.liquid
+++ b/templates/newsletter/form.liquid
@@ -1,25 +1,28 @@
-<section class="page-header page-header--newsletter">
-  <div class="wrapper">
-    <header class="section__header page-header__header">
-      <h1 class="section__title page-header__title">{{ "Newsletter" | t }}</h1>
-    </header>
-    <main class="section__main page-header__description">
-      {% if form.created_successfully? %}
-        <p>{{ "Abonnez-vous à notre newsletter pour recevoir les dernières nouveautés du restaurant." | t }}</p>
-      {% else %}
-        <div class="message message--error">
-          <div class="message__description">
-            <p>{{ "Veuillez corriger les erreurs mentionnées ci-dessous :" | t }}</p>
+{% newsletter_subscribe_form %}
+  <section class="page-header page-header--newsletter">
+    <div class="wrapper">
+      <header class="section__header page-header__header">
+        <h1 class="section__title page-header__title">{{ "Inscription à la newsletter" | t }}</h1>
+      </header>
+      <main class="section__main page-header__description">
+        {% if form.created_successfully? %}
+          <p>{{ "Abonnez-vous à notre newsletter pour recevoir les dernières nouveautés du restaurant." | t }}</p>
+        {% else %}
+          <div class="message message--error">
+            <div class="message__description">
+              <p>
+                <i class="icon-warning"></i>
+                {{ "Veuillez corriger les erreurs mentionnées ci-dessous :" | t }}
+              </p>
+            </div>
           </div>
-        </div>
-      {% endif %}
-    </main>
-  </div>
-</section>
+        {% endif %}
+      </main>
+    </div>
+  </section>
 
-<section class="newsletter-form">
-  <div class="wrapper">
-    {% newsletter_subscribe_form %}
+  <section class="newsletter-form">
+    <div class="wrapper">
       <fieldset class="field-group">
         <div class="input">
           <label for="subscriberEmail">{{ "Votre adresse email :" | t }}</label>
@@ -34,6 +37,6 @@
           <input class="button" type="submit" value="{{ "Valider" | t }}">
         </div>
       </fieldset>
-    {% endnewsletter_subscribe_form %}
-  </div>
-</section>
+    </div>
+  </section>
+{% endnewsletter_subscribe_form %}
