--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -112,7 +112,6 @@ $address-color: {{ theme_settings.address-color }};
 
 // Restaurant photo gallery
 $restaurant-gallery-background: {{ theme_settings.restaurant-gallery-background }};
-$gallery-item-background: {{ theme_settings.gallery-item-background }};
 $gallery-caption-color: {{ theme_settings.gallery-caption-color }};
 
 
@@ -155,7 +154,7 @@ $breakpoint-has-pull:  ('medium', 'medium-down', 'large');
 
 
 /* Width variables */
-$siteWidth: 1180px;
+$siteWidth: 960px;
 $gutter: 24px;
 $gridGutter: 24px; // can be a %, but nested grids will have smaller margins because of it
 
@@ -1380,14 +1379,11 @@ label {
     padding: 0;
   }
 .food--featured {
+  .icon-star {
+    color: $featured-star-color;
+  }
   .food__title {
     font-weight: bold;
-    &:before {
-      content: "\2605";
-      color: $featured-star-color;
-      display: inline-block;
-      margin-right: .25em;
-    }
   }
 }
 
@@ -1454,20 +1450,146 @@ label {
 .restaurant-gallery {
   background-color: $restaurant-gallery-background;
 }
-  .gallery {
-
+  .gallery__item {
+    position: relative;
+    margin-bottom: 1em;
   }
-    .gallery__item {
-      background-color: $gallery-item-background;
-      margin-bottom: 2em;
+    .gallery__img {
+      position: relative;
+      img {
+        display: block;
+        max-width: 100%;
+      }
     }
-      .gallery__image {
-        @extend .auto;
-      }
-      .gallery__caption {
-        color: $gallery-caption-color;
-        padding: 0 .5em .5em;
-      }
+    .photo__caption {
+      display: inline-block;
+      vertical-align: middle;
+      line-height: normal;
+      word-break: break-word;
+    }
+    .photo__link {
+      @include transition(background-color .5s);
+      background-color: rgba(0, 0, 0, 0.5);
+      color: $gallery-caption-color;
+      font-weight: 700;
+      line-height: 200px;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      display: block;
+      overflow: hidden;
+      text-align: center;
+      text-decoration: none;
+    }
+  .gallery__item:hover .photo__link {
+      background-color: rgba(0, 0, 0, 0.25);
+  }
+
+/**
+ * Pure CSS Lightbox
+ * @see http://tympanus.net/codrops/2011/12/26/css3-lightbox/
+ */
+.lb-overlay{
+  width: 0px;
+  height: 0px;
+  position: fixed;
+  overflow: hidden;
+  left: 0px;
+  top: 0px;
+  padding: 0px;
+  z-index: 99;
+  text-align: center;
+  background: rgba(255,255,255, .95);
+}
+.lb-overlay > div {
+  position: relative;
+  width: 450px;
+  height: 80px;
+  margin: 40px auto 0px auto;
+}
+.lb-overlay div h3 {
+  padding: 0px 20px;
+  width: 200px;
+  height: 60px;
+}
+.lb-overlay div h3 {
+  font-size: 24px;
+  text-align: center;
+  width: 100%;
+}
+.lb-overlay a.lb-close{
+  z-index: 1001;
+  position: absolute;
+  top: 43px;
+  left: 50%;
+  text-align: center;
+  width: 50px;
+  height: 23px;
+  overflow: hidden;
+  margin-left: -25px;
+  text-decoration: none;
+}
+.lb-overlay img{
+  /* height: 100%; For Opera max-height does not seem to work */
+  max-height: 100%;
+  position: relative;
+  opacity: 0;
+  filter: alpha(opacity=0); /* internet explorer */
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
+  -webkit-transition: opacity 0.5s linear;
+  -moz-transition: opacity 0.5s linear;
+  -o-transition: opacity 0.5s linear;
+  -ms-transition: opacity 0.5s linear;
+  transition: opacity 0.5s linear;
+}
+.lb-prev, .lb-next{
+  position: absolute;
+  top: -32px;
+  width: 24px;
+  height: 25px;
+  left: 50%;
+  opacity: 0.8;
+  filter: alpha(opacity=80); /* internet explorer */
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=80)"; /*IE8*/
+}
+.lb-prev:hover, .lb-next:hover{
+  opacity: 1;
+  filter: alpha(opacity=99); /* internet explorer */
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=99)"; /*IE8*/
+}
+.lb-prev{
+  color: $body-color;
+  margin-left: -30px;
+  text-decoration: none;
+}
+.lb-next{
+  color: $body-color;
+  margin-left: 6px;
+  text-decoration: none;
+}
+.lb-overlay:target {
+  width: auto;
+  height: auto;
+  bottom: 0px;
+  right: 0px;
+  padding: 80px 100px 120px 100px;
+}
+.lb-overlay:target img,
+.lb-overlay:target a.lb-close{
+  margin: 0 auto;
+  opacity: 1;
+  filter: alpha(opacity=99); /* internet explorer */
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=99)"; /*IE8*/
+}
+/* 
+  100% Height for Opera as the max-height seems to be ignored, not optimal for large screens 
+  http://bricss.net/post/11230266445/css-hack-to-target-opera 
+*/
+x:-o-prefocus, .lb-overlay img {
+    height: 100%;
+}
+
+
 
 
 // ==============================================================================
@@ -1627,7 +1749,6 @@ label {
   body,
   input,
   textarea,
-  button,
   select {
     font-size: 112.5%;
   }
@@ -1653,7 +1774,6 @@ label {
   body,
   input,
   textarea,
-  button,
   select {
     font-size: 125%;
   }
