--- a/snippets/food.liquid
+++ b/snippets/food.liquid
@@ -1,9 +1,14 @@
 <div class="food {% if food.featured_in_menu? %}food--featured{% endif %} {{food.auto_css_classes}}" id="food-{{food.id}}">
   {% if food.main_image? %}
-    {{ food.main_image | custom_image_url:'64x64#' | image_tag:'class:food__image circle' }}
+    {{ food.main_image | custom_image_url:'80x80#' | image_tag:'class:food__image circle' }}
   {% endif %}
   <div class="food__body">
-    <h5 class="food__title">{{ food.name }}</h3>
+    <h5 class="food__title">
+      {% if food.featured_in_menu? %}
+        <i class="icon-star"></i>
+      {% endif %}
+      {{ food.name }}
+    </h3>
     {% if food.tags? %}
       <div class="food__tags">
         {% for tag in food.tags %}
